# rust_weather_cron

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  index.ts  package-lock.json  package.json
.github/workflows/: aws-cdk.yml  rust.yml
scripts/: deploy.sh
src/: lib.rs  main.rs
