[package]
name = "rust-dynamo-weather"
version = "0.1.0"
authors = ["Kevin Wang <kwangsan@gmail.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4"
# dotenv = "0.15.0"
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", version = "0.1.0" }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.10.10", features = ["json"] }
serde = "1.0.118"
serde_derive = "1.0.118"
serde_dynamodb = "0.6.0"
serde_json = "1.0.60"
tokio = { version = "0.2" }
dotenv = "0.15.0"

[dependencies.rusoto_core]
version = "0.45.0"

[dependencies.rusoto_dynamodb]
version = "0.45.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
